--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1 id="title">Whack-a-Mole</h1>
-      <section id="info">
+      <section class="info">
         <div>
           <button class="start">Start</button>
         </div>
