starting project from scratch

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           <h2>score: <span id="score">0</span></h2>
         </div>
         <div>
-          <button class="start">Start</button>
+          <button id="start">Start</button>
         </div>
         <div>
           <h2><span id="timer">0</span> seconds left.</h2>
@@ -49,6 +49,6 @@
       <!--TODO: Add the missing holes and moles. -->
     </div>
    
-    <script src="./src/index.js"></script>
+    <script src="./src/iindex.js"></script>
   </body>
 </html>
