--- a/index.html
+++ b/index.html
@@ -49,6 +49,6 @@
       <!--TODO: Add the missing holes and moles. -->
     </div>
    
-    <script src="./src/iindex.js"></script>
+    <script src="./src/index.js"></script>
   </body>
 </html>
